--- a/frontend/login.html
+++ b/frontend/login.html
@@ -7,7 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="icon" href="./Material/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="./css/login.css" />
+    <link rel="stylesheet" href="./css/globals.css" />
+    <link rel="stylesheet" href="./css/notifications.css" />
   </head>
 
   <body
@@ -163,5 +164,6 @@
     </div>
 
     <script src="./js/login.js"></script>
+    <script src="./js/notifications.js"></script>
   </body>
 </html>
