--- a/frontend/protocols.html
+++ b/frontend/protocols.html
@@ -6,6 +6,7 @@
     <title>Relief Protocols | CrisisMitra</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/feather-icons"></script>
+    <script src="https://unpkg.com/lucide@latest"></script>
     <link rel="icon" href="./Material/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css/globals.css" />
     <link rel="stylesheet" href="./css/protocols.css" />
@@ -198,7 +199,7 @@
               <div
                 class="w-16 h-16 bg-orange-600/25 rounded-2xl flex items-center justify-center"
               >
-                <i data-feather="flame" class="w-10 h-10 text-orange-400"></i>
+                <i data-lucide="flame" class="w-10 h-10 text-orange-400"></i>
               </div>
               <div>
                 <h3 class="text-2xl font-bold">Fire & Smoke</h3>
