--- a/frontend/signin.html
+++ b/frontend/signin.html
@@ -7,6 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="icon" href="./Material/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/globals.css" />
+    <link rel="stylesheet" href="./css/notifications.css" />
     <link rel="stylesheet" href="./css/signin.css" />
   </head>
   <body class="min-h-screen flex items-center justify-center px-4 relative">
