--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -7,7 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="icon" href="./Material/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="./css/signup.css" />
+    <link rel="stylesheet" href="./css/globals.css" />
+    <link rel="stylesheet" href="./css/notifications.css" />
   </head>
 
   <body
